cluster/deploy-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petshop
  namespace: servershop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petshop
  template:
    metadata:
      labels:
        app: petshop
    spec:
      containers:
      - name: petshop
        image: <IMAGE>
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: regcred2
