cluster/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: petshop
  namespace: servershop
spec:
  selector:
    app: petshop
  ports:
  - protocol: TCP
    port: 80    
    targetPort: 5000
