cluster/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-server
  namespace: servershop  
spec:
  selector:
    app: mysql-server
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
