cluster/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petshop-ingress
  namespace: servershop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: petshop
            port:
              number: 80
